tests/baselines/reference/innerTypeCheckOfLambdaArgument.errors.txt
tests/cases/compiler/innerTypeCheckOfLambdaArgument.ts(10,7): error TS2322: Type 'number' is not assignable to type 'string'.


==== tests/cases/compiler/innerTypeCheckOfLambdaArgument.ts (1 errors) ====
    function takesCallback(callback: (n) =>any) {
    
    }
     
    takesCallback(
     
    	function inner(n) {
                    // this line should raise an error
                    // otherwise, there's a bug in overload resolution / partial typechecking
    		var k: string = 10; 
    		    ~
!!! error TS2322: Type 'number' is not assignable to type 'string'.
        }
    );
    